tests/ui/route-branch-double-decode.stderr
error[E0382]: use of moved value: `branch`
  --> tests/ui/route-branch-double-decode.rs:44:19
   |
42 |     let branch = futures::executor::block_on(endpoint.offer()).unwrap();
   |         ------ move occurs because `branch` has type `RouteBranch<'_, '_, 0, SessionKit<'_, T, U, C, MAX_RV>, Mint>`, which does not implement the `Copy` trait
43 |     let _first = branch.decode::<g::Msg<7, FramePayload>>();
   |                         ----------------------------------- `branch` moved due to this method call
44 |     let _second = branch.decode::<g::Msg<7, FramePayload>>();
   |                   ^^^^^^ value used here after move
   |
note: `RouteBranch::<'e, 'r, ROLE, SessionKit<'cfg, T, U, C, MAX_RV>, Mint>::decode` takes ownership of the receiver `self`, which moves `branch`
  --> src/endpoint.rs
   |
   |         self,
   |         ^^^^
